# grpc_test_project

./: CMakeLists.txt  Dockerfile  Makefile  client_with_zense.py  client_without_zense.py  gen_protobuf_codes.py  lena_async_client.py  requirements.txt  server_with_zense.py  server_without_zense.py  utils.py
protos/: rgbd.proto
src/: main.cpp  main_async.cpp  main_sync.cpp
tests/: test_ndarray_to_protobuf.py
